@@ -4,6 +4,8 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -13,13 +15,16 @@ import static org.mockito.Mockito.when;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 
 import org.bukkit.Bukkit;
+import org.bukkit.World;
 import org.bukkit.entity.Player;
 import org.bukkit.scheduler.BukkitScheduler;
+import org.eclipse.jdt.annotation.NonNull;
 import org.eclipse.jdt.annotation.Nullable;
 import org.junit.After;
 import org.junit.Before;
@@ -37,6 +42,7 @@ import world.bentobox.bentobox.BentoBox;
 import world.bentobox.bentobox.Settings;
 import world.bentobox.bentobox.api.addons.GameModeAddon;
 import world.bentobox.bentobox.api.commands.CompositeCommand;
+import world.bentobox.bentobox.api.configuration.WorldSettings;
 import world.bentobox.bentobox.api.events.island.IslandEvent.Reason;
 import world.bentobox.bentobox.api.user.User;
 import world.bentobox.bentobox.blueprints.dataobjects.BlueprintBundle;
@@ -48,14 +54,14 @@ import world.bentobox.bentobox.managers.IslandsManager;
 import world.bentobox.bentobox.managers.PlayersManager;
 import world.bentobox.bentobox.managers.island.NewIsland;
 import world.bentobox.bentobox.managers.island.NewIsland.Builder;
-import world.bentobox.bentobox.panels.IslandCreationPanel;
+import world.bentobox.bentobox.panels.customizable.IslandCreationPanel;
 
 /**
  * @author tastybento
  *
  */
 @RunWith(PowerMockRunner.class)
-@PrepareForTest({Bukkit.class, BentoBox.class, NewIsland.class, IslandCreationPanel.class})
+@PrepareForTest({ Bukkit.class, BentoBox.class, NewIsland.class, IslandCreationPanel.class })
 public class IslandCreateCommandTest {
 
     @Mock
@@ -75,6 +81,12 @@ public class IslandCreateCommandTest {
     private CompositeCommand ic;
     @Mock
     private BlueprintsManager bpm;
+    @Mock
+    private World world;
+    @Mock
+    private @NonNull WorldSettings ws;
+    @Mock
+    private Island island;
 
     /**
      */
@@ -97,15 +109,19 @@ public class IslandCreateCommandTest {
         UUID uuid = UUID.randomUUID();
         when(user.getUniqueId()).thenReturn(uuid);
         when(user.getPlayer()).thenReturn(player);
-        when(user.hasPermission(Mockito.anyString())).thenReturn(true);
-        when(user.getTranslation(Mockito.any())).thenAnswer((Answer<String>) invocation -> invocation.getArgument(0, String.class));
+        when(user.hasPermission(anyString())).thenReturn(true);
+        when(user.getTranslation(any()))
+                .thenAnswer((Answer<String>) invocation -> invocation.getArgument(0, String.class));
+        // Return the default value for perm questions by default
+        when(user.getPermissionValue(anyString(), anyInt()))
+                .thenAnswer((Answer<Integer>) inv -> inv.getArgument(1, Integer.class));
         User.setPlugin(plugin);
         // Set up user already
         User.getInstance(player);
 
         // Addon
         GameModeAddon addon = mock(GameModeAddon.class);
-
+        when(addon.getPermissionPrefix()).thenReturn("bskyblock.");
 
         // Parent command has no aliases
         when(ic.getSubCommandAliases()).thenReturn(new HashMap<>());
@@ -115,16 +131,16 @@ public class IslandCreateCommandTest {
         when(ic.getUsage()).thenReturn("");
         when(ic.getSubCommand(Mockito.anyString())).thenReturn(Optional.empty());
         when(ic.getAddon()).thenReturn(addon);
-
+        when(ic.getWorld()).thenReturn(world);
 
         // No island for player to begin with (set it later in the tests)
         when(im.hasIsland(any(), eq(uuid))).thenReturn(false);
-        when(im.isOwner(any(), eq(uuid))).thenReturn(false);
+        // when(im.isOwner(any(), eq(uuid))).thenReturn(false);
         // Has team
         when(im.inTeam(any(), eq(uuid))).thenReturn(true);
-
+        when(island.getOwner()).thenReturn(uuid);
+        when(im.getPrimaryIsland(world, uuid)).thenReturn(island);
         when(plugin.getIslands()).thenReturn(im);
-
 
         PlayersManager pm = mock(PlayersManager.class);
         when(plugin.getPlayers()).thenReturn(pm);
@@ -134,8 +150,11 @@ public class IslandCreateCommandTest {
         PowerMockito.mockStatic(Bukkit.class);
         when(Bukkit.getScheduler()).thenReturn(sch);
 
-        // IWM friendly name
+        // IWM
         when(iwm.getFriendlyName(any())).thenReturn("BSkyBlock");
+        when(ws.getConcurrentIslands()).thenReturn(1); // One island allowed
+        when(iwm.getWorldSettings(world)).thenReturn(ws);
+        when(iwm.getAddon(world)).thenReturn(Optional.of(addon));
         when(plugin.getIWM()).thenReturn(iwm);
 
         // NewIsland
@@ -166,7 +185,8 @@ public class IslandCreateCommandTest {
     }
 
     /**
-     * Test method for {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#IslandCreateCommand(world.bentobox.bentobox.api.commands.CompositeCommand)}.
+     * Test method for
+     * {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#IslandCreateCommand(world.bentobox.bentobox.api.commands.CompositeCommand)}.
      */
     @Test
     public void testIslandCreateCommand() {
@@ -175,7 +195,8 @@ public class IslandCreateCommandTest {
     }
 
     /**
-     * Test method for {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#setup()}.
+     * Test method for
+     * {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#setup()}.
      */
     @Test
     public void testSetup() {
@@ -190,24 +211,49 @@ public class IslandCreateCommandTest {
      */
     @Test
     public void testCanExecuteUserStringListOfStringHasIsland() {
-        @Nullable
-        Island island = mock(Island.class);
-        when(im.getIsland(any(), Mockito.any(User.class))).thenReturn(island);
+        // Currently user has two islands
+        when(im.getNumberOfConcurrentIslands(user.getUniqueId(), world)).thenReturn(2);
+        // Player has an island
         assertFalse(cc.canExecute(user, "", Collections.emptyList()));
-        verify(user).sendMessage(eq("general.errors.already-have-island"));
+        verify(user).sendMessage("commands.island.create.you-cannot-make");
     }
 
     /**
      * Test method for {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#canExecute(world.bentobox.bentobox.api.user.User, java.lang.String, java.util.List)}.
      */
     @Test
+    public void testCanExecuteUserStringListOfStringZeroAllowed() {
+        when(ws.getConcurrentIslands()).thenReturn(0); // No islands allowed
+        assertFalse(cc.canExecute(user, "", Collections.emptyList()));
+        verify(user).sendMessage("commands.island.create.you-cannot-make");
+
+    }
+
+    /**
+     * Test method for {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#canExecute(world.bentobox.bentobox.api.user.User, java.lang.String, java.util.List)}.
+     */
+    @Test
+    public void testCanExecuteUserStringListOfStringHasPerm() {
+        // Currently user has two islands
+        when(im.getNumberOfConcurrentIslands(user.getUniqueId(), world)).thenReturn(19);
+        // Perm
+        when(user.getPermissionValue(anyString(), anyInt())).thenReturn(20); // 20 allowed!
+        assertTrue(cc.canExecute(user, "", Collections.emptyList()));
+        verify(user, never()).sendMessage(anyString());
+    }
+
+    /**
+     * Test method for
+     * {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#canExecute(world.bentobox.bentobox.api.user.User, java.lang.String, java.util.List)}.
+     */
+    @Test
     public void testCanExecuteUserStringListOfStringHasIslandReserved() {
         @Nullable
         Island island = mock(Island.class);
-        when(im.getIsland(any(), Mockito.any(User.class))).thenReturn(island);
+        when(im.getIsland(any(), any(User.class))).thenReturn(island);
         when(island.isReserved()).thenReturn(true);
         assertTrue(cc.canExecute(user, "", Collections.emptyList()));
-        verify(user, never()).sendMessage(eq("general.errors.already-have-island"));
+        verify(user, never()).sendMessage("general.errors.already-have-island");
 
     }
 
@@ -216,12 +262,12 @@ public class IslandCreateCommandTest {
      */
     @Test
     public void testCanExecuteUserStringListOfStringTooManyIslands() {
-        when(im.hasIsland(any(), Mockito.any(UUID.class))).thenReturn(false);
-        when(im.inTeam(any(), Mockito.any(UUID.class))).thenReturn(false);
+        when(im.getPrimaryIsland(any(), any(UUID.class))).thenReturn(null);
+        when(im.inTeam(any(), any(UUID.class))).thenReturn(false);
         when(iwm.getMaxIslands(any())).thenReturn(100);
-        when(im.getIslandCount(any())).thenReturn(100);
+        when(im.getIslandCount(any())).thenReturn(100L);
         assertFalse(cc.canExecute(user, "", Collections.emptyList()));
-        verify(user).sendMessage(eq("commands.island.create.too-many-islands"));
+        verify(user).sendMessage("commands.island.create.too-many-islands");
 
     }
 
@@ -235,7 +281,7 @@ public class IslandCreateCommandTest {
         // Has permission
         when(bpm.checkPerm(any(), any(), any())).thenReturn(true);
 
-        assertTrue(cc.execute(user, "", Collections.singletonList("custom")));
+        assertTrue(cc.execute(user, "", List.of("custom")));
         verify(builder).player(eq(user));
         verify(builder).addon(any());
         verify(builder).reason(eq(Reason.CREATE));
@@ -255,7 +301,7 @@ public class IslandCreateCommandTest {
         when(bpm.checkPerm(any(), any(), any())).thenReturn(true);
 
         when(builder.build()).thenThrow(new IOException("commands.island.create.unable-create-island"));
-        assertFalse(cc.execute(user, "", Collections.singletonList("custom")));
+        assertFalse(cc.execute(user, "", List.of("custom")));
         verify(user).sendMessage("commands.island.create.creating-island");
         verify(user).sendMessage("commands.island.create.unable-create-island");
         verify(plugin).logError("Could not create island for player. commands.island.create.unable-create-island");
@@ -275,17 +321,19 @@ public class IslandCreateCommandTest {
     }
 
     /**
-     * Test method for {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#execute(world.bentobox.bentobox.api.user.User, java.lang.String, java.util.List)}.
+     * Test method for
+     * {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#execute(world.bentobox.bentobox.api.user.User, java.lang.String, java.util.List)}.
      */
     @Test
     public void testExecuteUserStringListOfStringUnknownBundle() {
-        assertFalse(cc.execute(user, "", Collections.singletonList("custom")));
+        assertFalse(cc.execute(user, "", List.of("custom")));
         verify(user).sendMessage(eq("commands.island.create.unknown-blueprint"));
         verify(user, never()).sendMessage("commands.island.create.creating-island");
     }
 
     /**
-     * Test method for {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#execute(world.bentobox.bentobox.api.user.User, java.lang.String, java.util.List)}.
+     * Test method for
+     * {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#execute(world.bentobox.bentobox.api.user.User, java.lang.String, java.util.List)}.
      */
     @Test
     public void testExecuteUserStringListOfStringNoBundleNoPanel() {
@@ -313,7 +361,8 @@ public class IslandCreateCommandTest {
     }
 
     /**
-     * Test method for {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#execute(world.bentobox.bentobox.api.user.User, java.lang.String, java.util.List)}.
+     * Test method for
+     * {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#execute(world.bentobox.bentobox.api.user.User, java.lang.String, java.util.List)}.
      */
     @Test
     public void testExecuteUserStringListOfStringCooldown() {
@@ -331,14 +380,13 @@ public class IslandCreateCommandTest {
     }
 
     /**
-     * Test method for {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#execute(world.bentobox.bentobox.api.user.User, java.lang.String, java.util.List)}.
+     * Test method for
+     * {@link world.bentobox.bentobox.api.commands.island.IslandCreateCommand#execute(world.bentobox.bentobox.api.user.User, java.lang.String, java.util.List)}.
      */
     @Test
     public void testExecuteUserStringListOfStringShowPanel() {
-        Map<String, BlueprintBundle> map = new HashMap<>();
-        map.put("bundle1", new BlueprintBundle());
-        map.put("bundle2", new BlueprintBundle());
-        map.put("bundle3", new BlueprintBundle());
+        Map<String, BlueprintBundle> map = Map.of("bundle1", new BlueprintBundle(), "bundle2", new BlueprintBundle(),
+                "bundle3", new BlueprintBundle());
         when(bpm.getBlueprintBundles(any())).thenReturn(map);
         assertTrue(cc.execute(user, "", Collections.emptyList()));
         // Panel is shown, not the creation message
